--- a/exercicios/ex002/colinha.html
+++ b/exercicios/ex002/colinha.html
@@ -159,7 +159,7 @@
 
         <h2>trabalhando com audios</h2>
         <p>audio abaixo</p>
-        <audio preload="metadata" autoplay controls loop>
+        <audio preload="metadata"  controls loop>
             <source src="audios/WhatsApp Audio 2022-07-07 at 11.21.52 AM.aac" type="audio/ogg">
             <!--arquivos OGG tem a extenção .acc-->
             <source src="audios/WhatsApp Audio 2022-07-07 at 11.21.52 AM.mpeg" type="audio/mpeg">
