--- a/exercicios/exercicio pessoal/pp.html
+++ b/exercicios/exercicio pessoal/pp.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ellite Adestramento</title>
+    <style>
+        iframe{
+            width: 600px;
+            height: 400px;
+            border: 1px solid black;
+            display: block;
+            margin: auto;
+            border-radius: 20px;
+            margin-bottom: 80px;
+        }
+        #frame{
+            width: 600px;
+        }
+    </style>
+
 </head>
 <body>
     <h1>Ellite Adestramento</h1>
@@ -18,6 +33,12 @@
         <li><a href="https://www.facebook.com/elliteadestramento" target="_blank"><img src="face15.png" alt="logo face">meu contato facebook</a></li>
         <li><a href="https://api.whatsapp.com/send/?phone=5531997778185&text&type=phone_number&app_absent=0" target="_blank"><img src="wpp15.png" alt="wpp logo">meu contato whatsapp</a></li>
     </ul>
+
+    <iframe name="frame" src="../ex002/colinha.html" target="frame">
+        aqui fica a msg caso seu navegador não tenha suporte para o ifreme (sugestão: coloque o link para servir de segunda opção)
+    </iframe>
+    <img id="frame" src="seguranca-iframe.png" alt="">
+    <p>dicas de como proteger seu site de invasões e ataques por meu dos iframes</p>
 </body>
 </html>
 
