--- a/formularios/formulario1.html
+++ b/formularios/formulario1.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>meu primeiero formulario</h1>
-    <form action="cadastro.php" method="post" autocomplete="off">
+    <form  method="post" autocomplete="off">
         <p><label for="nome">nome:</label> <input type="text" name="nome" id="nome"></p>
         <p><label for="sobrenome">sobrenome:</label> <input type="text" name="sobrenome" id="sobrenome"></p>
         <p><input type="submit" value="enviar"></p>
