--- a/ecomerce/index.html
+++ b/ecomerce/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="shop/estilo/style.css">
     <link rel="script" href="script.js">
     <title>Center Shop</title>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 
 <body id="body">
